Updated CS:Source config.

--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 23, 2018   |   "
+echo "   |   Jan. 06, 2019   |   "
 
 ///////////////
 // Rates     //
@@ -89,7 +89,7 @@ mat_vsync "0"
 //cl_bobup "0.5"
 
 cl_autowepswitch "0"
-cl_righthand "0"
+cl_righthand "1"
 
 mp_playerid "0"
 
@@ -111,12 +111,12 @@ cl_observercrosshair "1"
 
 cl_crosshairalpha "200"
 cl_crosshaircolor "0"
-cl_crosshaircolor_r "50"
+cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
-cl_crosshaircolor_b "50"
+cl_crosshaircolor_b "250"
 cl_crosshairdot "1"
 cl_crosshairscale "1200"
-cl_crosshairsize "6"
+cl_crosshairsize "5.5"
 cl_crosshairspreadscale "0.3"
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
@@ -163,30 +163,30 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0; cl_crosshairsize 6"
+alias "+robocop" "cl_crosshairsize 450"
+alias "-robocop" "cl_crosshairsize 5.5"
 
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "use weapon_flashbang"
 bind "4" "use weapon_hegrenade"
-bind "5" "+showpos; use weapon_smokegrenade"
+bind "5" "+robocop; use weapon_smokegrenade"
 bind "6" "use weapon_c4"
 bind "7" "use weapon_c4"
 bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "impulse 201"
-bind "c" "toggle sensitivity 8.0 6.66 3.33 1.11"
+bind "c" "radio3"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "toggle cl_righthand 1 0"
+bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 unbind "i"
 bind "j" "radio3; impulse 200"
-bind "k" "+voicerecord"
+bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
@@ -197,7 +197,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals"
+bind "v" "r_cleardecals; impulse 100"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -227,8 +227,8 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 6"
-bind "=" "toggle cl_crosshaircolor 0 1"
+bind "-" "toggle cl_crosshairsize 4.5 1 6 5.5"
+bind "=" "toggle cl_crosshaircolor 0 1 4 5"
 unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
@@ -237,7 +237,7 @@ bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
-bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
+bind "HOME" "voice_enable 1; voice_scale 0.2; echo - Voice: 20%"
 bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
 bind "DEL" "volume 0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
@@ -249,10 +249,10 @@ bind "ALT" "+jumpthrow"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 unbind "RCTRL"
-bind "LWIN" "say Windows key pressed."
-bind "RWIN" "say Windows key pressed."
-bind "APP" "say App key pressed."
-unbind "UPARROW"
+unbind "LWIN"
+unbind "RWIN"
+unbind "APP"
+bind "UPARROW" "incrementvar cl_crosshaircolor 0 1 1"
 unbind "LEFTARROW"
 unbind "DOWNARROW"
 unbind "RIGHTARROW"
@@ -270,8 +270,8 @@ bind "F11" "exec css.cfg"
 bind "F12" "exec css.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
-bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "toggle voice_scale 0 0.75 0.20"
+bind "MOUSE3" "incrementvar mat_monitorgamma 1.6 2.7 1"
+bind "MOUSE4" "toggle voice_scale 0 0.20"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
@@ -290,13 +290,15 @@ cl_downloadfilter "all"
 cl_allowdownload "1"
 cl_allowupload "1"
 
-cl_disablehtmlmotd "0"
+cl_disablefreezecam "1"
+cl_disablehtmlmotd "1"
 
 cl_forcepreload "1"
 
 skill "3"
 
 mat_queue_mode "2"
+engine_no_focus_sleep "0"
 
 cl_clanid "2456601"
 
