--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 26, 2018   |   "
+echo "   |   Jan. 08, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -190,9 +190,9 @@ cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
 cl_crosshaircolor "1"
-cl_crosshaircolor_r "50"
+cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
-cl_crosshaircolor_b "50"
+cl_crosshaircolor_b "250"
 
 
 ///////////////
@@ -250,7 +250,7 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-unbind "i"
+bind "i" "cl_crosshaircolor 5"
 bind "j" "impulse 200"
 bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
@@ -265,7 +265,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "slot12; radio2"
 bind "y" "messagemode"
 bind "z" "radio1"
 bind "KP_INS" "buy vest"
@@ -337,7 +337,7 @@ bind "F12" "exec csgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "invprev"             // "toggle voice_enable 0 1"
+bind "MOUSE4" "toggle voice_enable 0 1"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
