--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 26, 2018   |   "
+echo "   |   Jan. 08, 2019   |   "
 
 // Launch: -freq 240 +mat_software_aa_strength 0
 
@@ -190,9 +190,9 @@ cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
 cl_crosshaircolor "1"
-cl_crosshaircolor_r "50"
+cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
-cl_crosshaircolor_b "50"
+cl_crosshaircolor_b "250"
 
 
 ///////////////
@@ -253,7 +253,7 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-unbind "i"
+bind "i" "cl_crosshaircolor 5"
 bind "j" "radio3; impulse 200"
 unbind "k"
 bind "l" "impulse 100"
@@ -268,7 +268,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "slot12; radio2"
 bind "y" "messagemode"
 bind "z" "radio1"
 bind "KP_INS" "buy vest"
@@ -340,8 +340,8 @@ bind "F12" "exec napkincsgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "lastinv"
-bind "MOUSE5" "invprev"             // "toggle voice_enable 0 1"
+bind "MOUSE4" "lastinv"             // "toggle voice_enable 0 1"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
