Updated CS 1.6 configs.
Updated Napkin CSS config.

--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,9 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jan. 06, 2019   |   "
+echo "   |   Jan. 09, 2019   |   "
+
+// Launch: -freq 144 -nojoy -novid
+
 
 ///////////////
 // Rates     //
@@ -76,7 +79,7 @@ net_scale "5"
 
 
 ///////////////
-// GUI       //
+// UI        //
 ///////////////
 
 mat_monitorgamma "1.600000"
@@ -178,14 +181,14 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "impulse 201"
-bind "c" "radio3"
+bind "c" "radio1"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-unbind "i"
-bind "j" "radio3; impulse 200"
+bind "i" "cl_crosshaircolor 5"
+bind "j" "radio1; impulse 200"
 bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
@@ -199,9 +202,9 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; impulse 100"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "radio3"
 bind "y" "messagemode"
-bind "z" "radio1"
+bind "z" "radio2"
 bind "KP_INS" "buy vest"
 bind "KP_DEL" "buy vesthelm"
 bind "KP_END" "buy hegrenade"
@@ -254,7 +257,7 @@ unbind "RWIN"
 unbind "APP"
 bind "UPARROW" "incrementvar cl_crosshaircolor 0 1 1"
 unbind "LEFTARROW"
-unbind "DOWNARROW"
+bind "DOWNARROW" "toggle cl_dynamiccrosshair 0 1"
 unbind "RIGHTARROW"
 bind "F1" "use weapon_c4; drop"
 bind "F2" "rebuy"
@@ -278,7 +281,7 @@ bind "MWHEELDOWN" "+jump"
 
 
 ///////////////
-// Cvars     //
+// Misc      //
 ///////////////
 
 //developer "0"
@@ -307,6 +310,6 @@ cl_clanid "2456601"
 // End       //
 ///////////////
 
-echo "   |  CATEXEC LOADED!  |   "
+echo "   |  CAT CSS LOADED!  |   "
 echo "   ---------------------   "
 echo "                           "
