--- a/napkincs16.cfg
+++ b/napkincs16.cfg
@@ -1,8 +1,8 @@
-echo "                           "
-echo "   ---------------------   "
-echo "   |   Jan. 09, 2019   |   "
+echo "                             "
+echo "   -----------------------   "
+echo "   |    Jan. 09, 2019    |   "
 
-// Launch: -freq 144 -nojoy
+// Launch: -freq 240 -nojoy
 
 // Renderer:        OpenGL
 // HD Models:       Unchecked
@@ -147,7 +147,7 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "impulse 201"
-bind "c" "needbackup"
+bind "c" "+voicerecord"
 bind "d" "+moveright"
 bind "e" "use weapon_knife"
 bind "f" "hand"
@@ -155,13 +155,13 @@ bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "radio1"
 bind "j" "showbriefing"
-bind "k" "bind c +voicerecord"
+bind "k" "voice"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
 bind "o" "radio2"
 bind "p" "radio3"
-bind "q" "+attack2"
+bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
@@ -229,13 +229,13 @@ bind "F7" "say_team Bomb go A"
 bind "F8" "say_team Bomb go B"
 bind "F9" "graph"
 bind "F10" "quit"
-bind "F11" "exec cs16.cfg"
-bind "F12" "exec cs16.cfg"
+bind "F11" "exec napkincs16.cfg"
+bind "F12" "exec napkincs16.cfg"
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "lastinv"
+bind "MOUSE2" "+attack2"
 bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "voice"
-bind "MOUSE5" "+attack2"
+bind "MOUSE4" "lastinv"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -265,6 +265,6 @@ gl_texturemode "GL_NEAREST"
 ///////////////
 
 
-echo "   |  CAT 1.6 LOADED!  |   "
-echo "   ---------------------   "
-echo "                           "
+echo "   |  NAPKIN1.6 LOADED!  |   "
+echo "   -----------------------   "
+echo "                             "
