--- a/napkincss.cfg
+++ b/napkincss.cfg
@@ -1,6 +1,9 @@
 echo "                             "
 echo "   -----------------------   "
-echo "   |    Aug. 02, 2017    |   "
+echo "   |    Jan. 09, 2019    |   "
+
+// Launch: -freq 240 -nojoy -novid
+
 
 ///////////////
 // Rates     //
@@ -76,7 +79,7 @@ net_scale "5"
 
 
 ///////////////
-// GUI       //
+// UI        //
 ///////////////
 
 mat_monitorgamma "1.600000"
@@ -111,12 +114,12 @@ cl_observercrosshair "1"
 
 cl_crosshairalpha "200"
 cl_crosshaircolor "0"
-cl_crosshaircolor_r "50"
+cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
-cl_crosshaircolor_b "50"
+cl_crosshaircolor_b "250"
 cl_crosshairdot "1"
 cl_crosshairscale "1200"
-cl_crosshairsize "6"
+cl_crosshairsize "5.5"
 cl_crosshairspreadscale "0.3"
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
@@ -129,7 +132,7 @@ cl_scalecrosshair "1"
 // Mouse     //
 ///////////////
 
-sensitivity "1.11"
+sensitivity "3.33"
 zoom_sensitivity_ratio "1.0"
 
 cl_mouseenable "1"
@@ -163,45 +166,45 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0; cl_crosshairsize 5"
+alias "+robocop" "cl_crosshairsize 450"
+alias "-robocop" "cl_crosshairsize 5.5"
 
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "use weapon_flashbang"
 bind "4" "use weapon_hegrenade"
-bind "5" "use weapon_smokegrenade; +showpos"
+bind "5" "+robocop; use weapon_smokegrenade"
 bind "6" "use weapon_c4"
 bind "7" "use weapon_c4"
 bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "impulse 201"
-bind "c" "radio3"
+bind "c" "+voicerecord"
 bind "d" "+moveright"
-bind "e" "+use; r_cleardecals"
-bind "f" "toggle cl_righthand 1 0"
+bind "e" "slot3"
+bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-unbind "i"
-bind "j" "impulse 100"
-bind "k" "+voicerecord"
-unbind "l"
+bind "i" "cl_crosshaircolor 5"
+bind "j" "radio1; impulse 200"
+unbind "k"
+bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
-bind "o" "buyequip"
+unbind "o"
 unbind "p"
-bind "q" "+attack2"
+bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "use weapon_c4"
+bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "+voicerecord"
+bind "v" "r_cleardecals; impulse 100"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "radio3"
 bind "y" "messagemode"
-bind "z" "radio1"
+bind "z" "radio2"
 bind "KP_INS" "buy vest"
 bind "KP_DEL" "buy vesthelm"
 bind "KP_END" "buy hegrenade"
@@ -226,9 +229,9 @@ bind "`" "toggleconsole"
 bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
-bind "\" "toggle cl_crosshairsize 2 6"
-unbind "-"
-bind "=" "toggle cl_crosshaircolor 0 1"
+bind "\" "toggle cl_crosshairdot 0 1"
+bind "-" "toggle cl_crosshairsize 4.5 1 6 5.5"
+bind "=" "toggle cl_crosshaircolor 0 1 4 5"
 unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
@@ -237,7 +240,7 @@ bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
-bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
+bind "HOME" "voice_enable 1; voice_scale 0.2; echo - Voice: 20%"
 bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
 bind "DEL" "volume 0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
@@ -249,14 +252,14 @@ bind "ALT" "+jumpthrow"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 unbind "RCTRL"
-bind "LWIN" "say Windows key pressed."
-bind "RWIN" "say Windows key pressed."
-bind "APP" "say App key pressed."
-unbind "UPARROW"
+unbind "LWIN"
+unbind "RWIN"
+unbind "APP"
+bind "UPARROW" "incrementvar cl_crosshaircolor 0 1 1"
 unbind "LEFTARROW"
-unbind "DOWNARROW"
+bind "DOWNARROW" "toggle cl_dynamiccrosshair 0 1"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
+bind "F1" "use weapon_c4; drop"
 bind "F2" "rebuy"
 bind "F3" "say_team Bomb"
 bind "F4" "say_team Bomb dropped!"
@@ -266,19 +269,19 @@ bind "F7" "say_team Bomb go A"
 bind "F8" "say_team Bomb go B"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit"
-bind "F11" ""
+bind "F11" "exec napkincss.cfg"
 bind "F12" "exec napkincss.cfg"
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "lastinv"
-bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "slot3"
-bind "MOUSE5" "toggle mat_monitorgamma 2.6 1.6; toggle cl_crosshairdot 0 1"
+bind "MOUSE2" "+attack2"
+bind "MOUSE3" "incrementvar mat_monitorgamma 1.6 2.7 1"
+bind "MOUSE4" "lastinv"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
 
 ///////////////
-// Cvars     //
+// Misc      //
 ///////////////
 
 //developer "0"
@@ -290,13 +293,15 @@ cl_downloadfilter "all"
 cl_allowdownload "1"
 cl_allowupload "1"
 
-cl_disablehtmlmotd "0"
+cl_disablefreezecam "1"
+cl_disablehtmlmotd "1"
 
 cl_forcepreload "1"
 
 skill "3"
 
 mat_queue_mode "2"
+engine_no_focus_sleep "0"
 
 cl_clanid "2456601"
 
