Changed very important OCD value.

--- a/napkincs16.cfg
+++ b/napkincs16.cfg
@@ -42,7 +42,7 @@ voice_modenable "1"
 
 
 ///////////////
-//  UI       //
+// UI        //
 ///////////////
 
 brightness "2"
@@ -265,6 +265,6 @@ gl_texturemode "GL_NEAREST"
 ///////////////
 
 
-echo "   |  NAPKIN1.6 LOADED!  |   "
+echo "   |  NAPKIN 1.6 LOADED  |   "
 echo "   -----------------------   "
 echo "                             "
