Added pink and orange crosshair colors.

--- a/napkincss.cfg
+++ b/napkincss.cfg
@@ -193,8 +193,8 @@ unbind "k"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
-unbind "o"
-unbind "p"
+bind "o" "cl_crosshaircolor 5; cl_crosshaircolor_r 250; cl_crosshaircolor_g 100; cl_crosshaircolor_b 60"
+bind "p" "cl_crosshaircolor 5; cl_crosshaircolor_r 250; cl_crosshaircolor_g 40; cl_crosshaircolor_b 120"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
