--- a/css.cfg
+++ b/css.cfg
@@ -193,8 +193,8 @@ bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
-unbind "o"
-unbind "p"
+bind "o" "cl_crosshaircolor 5; cl_crosshaircolor_r 250; cl_crosshaircolor_g 100; cl_crosshaircolor_b 60"
+bind "p" "cl_crosshaircolor 5; cl_crosshaircolor_r 250; cl_crosshaircolor_g 40; cl_crosshaircolor_b 120"
 bind "q" "+attack2"
 bind "r" "+reload"
 bind "s" "+back"
