Added orange and pink crosshairs.
More OCD stuff.

--- a/css.cfg
+++ b/css.cfg
@@ -111,6 +111,7 @@ cl_showhelp "1"
 
 crosshair "1"
 cl_observercrosshair "1"
+cl_dynamiccrosshair "1"
 
 cl_crosshairalpha "200"
 cl_crosshaircolor "0"
@@ -118,13 +119,12 @@ cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_b "250"
 cl_crosshairdot "1"
-cl_crosshairscale "1200"
 cl_crosshairsize "5.5"
 cl_crosshairspreadscale "0.3"
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
 
-cl_dynamiccrosshair "1"
+cl_crosshairscale "0"
 cl_scalecrosshair "1"
 
 
@@ -187,14 +187,14 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
 bind "j" "radio1; impulse 200"
 bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
-bind "o" "cl_crosshaircolor 5; cl_crosshaircolor_r 250; cl_crosshaircolor_g 100; cl_crosshaircolor_b 60"
-bind "p" "cl_crosshaircolor 5; cl_crosshaircolor_r 250; cl_crosshaircolor_g 40; cl_crosshaircolor_b 120"
+bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairspreadscale 0.05"
+bind "p" "cl_crosshairsize 1; cl_crosshairspreadscale 0.03"
 bind "q" "+attack2"
 bind "r" "+reload"
 bind "s" "+back"
