--- a/napkincs16.cfg
+++ b/napkincs16.cfg
@@ -1,6 +1,6 @@
-echo "                             "
-echo "   -----------------------   "
-echo "   |    Jan. 09, 2019    |   "
+echo "                           "
+echo "   ---------------------   "
+echo "   |   Jan. 09, 2019   |   "
 
 // Launch: -freq 240 -nojoy
 
@@ -74,12 +74,11 @@ cl_bobcycle "0.8"
 
 crosshair "1"
 cl_observercrosshair "1"
+cl_dynamiccrosshair "0"
 
 cl_crosshair_color "50 250 50"
 cl_crosshair_size "small"
 cl_crosshair_translucent "0"
-
-cl_dynamiccrosshair "0"
 
 
 ///////////////
@@ -155,7 +154,7 @@ bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "radio1"
 bind "j" "showbriefing"
-bind "k" "voice"
+unbind "k"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
@@ -265,6 +264,6 @@ gl_texturemode "GL_NEAREST"
 ///////////////
 
 
-echo "   |  NAPKIN 1.6 LOADED  |   "
-echo "   -----------------------   "
-echo "                             "
+echo "   | NAPKIN 1.6 LOADED |   "
+echo "   ---------------------   "
+echo "                           "
