--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jan. 08, 2019   |   "
+echo "   |   Jan. 09, 2019   |   "
 
 // Launch: -freq 240 +mat_software_aa_strength 0
 
@@ -185,7 +185,6 @@ cl_crosshairgap "1"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
 cl_crosshairsize "5.5"
-cl_crosshairscale "0"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
@@ -193,6 +192,9 @@ cl_crosshaircolor "1"
 cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_b "250"
+
+cl_crosshairscale "0"
+cl_scalecrosshair "1"
 
 
 ///////////////
@@ -253,7 +255,7 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
 bind "j" "radio3; impulse 200"
 unbind "k"
 bind "l" "impulse 100"
