Changed JumpThrow method.

--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jan. 12, 2019   |   "
+echo "   |   Feb. 02, 2019   |   "
 
 // Launch: -freq 240 +mat_software_aa_strength 0
 
@@ -264,7 +264,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "-attack"
+bind "x" "-jump"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
@@ -310,7 +310,7 @@ bind "PGDN" "volume 1; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-unbind "ALT"
+bind "ALT" "-attack; +jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1 0.2"
