--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -9,7 +9,7 @@ echo "   |   Feb. 07, 2019   |   "
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "240.000000"
+mm_dedicated_search_maxping "240"
 net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat, ord
 
@@ -19,15 +19,15 @@ fps_max_menu "120"
 rate "786432"
 cl_cmdrate "128"
 cl_updaterate "128"
-cl_interp "0"
-cl_interp_ratio "1"
+cl_interp "0.000000"
+cl_interp_ratio "1.0"
 
 
 ///////////////
 // Sound     //
 ///////////////
 
-volume "1"
+volume "1.0"
 
 snd_mix_async "1"
 snd_mixahead "0.020"
@@ -44,8 +44,8 @@ snd_tensecondwarning_volume "0.000000"
 
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
-snd_headphone_pan_exponent "1.0"
-snd_headphone_pan_radial_weight "1.0"
+snd_headphone_pan_exponent "1.000000"
+snd_headphone_pan_radial_weight "1.000000"
 
 voice_enable "1"
 voice_forcemicrecord "1"
@@ -53,7 +53,7 @@ voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
-voice_scale "0.1"
+voice_scale "0.100000"
 voice_positional "1"
 
 dsp_enhance_stereo "0"
@@ -69,8 +69,8 @@ cl_mute_enemy_team "0"
 // HUD       //
 ///////////////
 
-safezonex "1"
-safezoney "1"
+safezonex "1.0"
+safezoney "1.0"
 
 hud_scaling "0.95"
 hud_showtargetid "1"
@@ -118,14 +118,14 @@ cpu_frequency_monitoring "0"
 // UI        //
 ///////////////
 
-mat_monitorgamma "2.000000"
+mat_monitorgamma "2.0"
 
 viewmodel_fov "60"
-viewmodel_offset_x "1"                  // "2.5"
+viewmodel_offset_x "1"                  // "2.500000"
 viewmodel_offset_y "1"                  // "2"
-viewmodel_offset_z "-1.5"
+viewmodel_offset_z "-1"                 // "-1.5"
 viewmodel_presetpos "1"
-viewmodel_recoil "1"
+viewmodel_recoil "1.0"
 
 cl_viewmodel_shift_left_amt "1.5"       // "0.5"
 cl_viewmodel_shift_right_amt "0.75"     // "0.25"
@@ -174,9 +174,9 @@ cl_fixedcrosshairgap "3"
 cl_crosshair_sniper_width "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "1"
+cl_crosshair_outlinethickness "1.0"
 cl_crosshair_dynamic_maxdist_splitratio "0.25"
-cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_innermod "1.0"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_t "0"
@@ -201,12 +201,14 @@ cl_scalecrosshair "1"
 // Mouse     //
 ///////////////
 
-sensitivity "3.33"
+sensitivity "3.333333"
 zoom_sensitivity_ratio_mouse "1.0"
+zoom_sensitivity_ratio_joystick "1.0"
 
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
+joystick_force_disabled_set_from_options "1"
 
 m_customaccel "0"
 m_customaccel_exponent "1.05"
@@ -310,16 +312,16 @@ bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
 bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
 bind "PGUP" "voice_enable 1; voice_scale 0.5; echo - Voice: 50%"
-bind "DEL" "volume 0; echo - Volume: 0%"
+bind "DEL" "volume 0.0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
-bind "PGDN" "volume 1; echo - Volume: 100%"
+bind "PGDN" "volume 1.0; echo - Volume: 100%"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
 bind "ALT" "+jumpthrow"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
-bind "RCTRL" "toggle safezonex 1 0.2"
+bind "RCTRL" "toggle safezonex 1.0 0.2"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
