Updated napkinpro for 1080p.
Added crosshair size toggle to mouse5.

--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 07, 2019   |   "
+echo "   |   Feb. 14, 2019   |   "
 
 // Launch: -freq 240 +mat_software_aa_strength 0
 
@@ -171,7 +171,7 @@ crosshair "1"
 cl_observercrosshair "1"
 cl_fixedcrosshairgap "3"
 
-cl_crosshair_sniper_width "1"
+cl_crosshair_sniper_width "2"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
 cl_crosshair_outlinethickness "1.0"
@@ -184,7 +184,7 @@ cl_crosshairdot "1"
 cl_crosshairgap "1"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "4.5"
+cl_crosshairsize "5.5"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
@@ -201,7 +201,7 @@ cl_scalecrosshair "1"
 // Mouse     //
 ///////////////
 
-sensitivity "3.333333"
+sensitivity "3.3425"
 zoom_sensitivity_ratio_mouse "1.0"
 zoom_sensitivity_ratio_joystick "1.0"
 
@@ -257,7 +257,7 @@ unbind "k"
 unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2"
+bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4"
 bind "p" "cl_crosshairsize 1; cl_crosshairgap -1"
 bind "q" "lastinv"
 bind "r" "+reload"
@@ -294,7 +294,7 @@ bind "," "toggle mat_monitorgamma 1.6 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 4.5"
+bind "-" "toggle cl_crosshairsize 2 1 5.5"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
@@ -339,7 +339,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "lastinv"
+bind "MOUSE5" "toggle cl_crosshairsize 450 5.5"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
