--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -266,7 +266,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "-jump"
+bind "x" "-jump; toggle cl_crosshairsize 450 5.5"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
@@ -339,7 +339,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "toggle cl_crosshairsize 450 5.5"
+bind "MOUSE5" "toggle mat_monitorgamma 1.6 2.6"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
