Added -d3d9ex to launch options.
Added "Comms" section after "Sound" section.
Commented out cl_forcepreload 0 for testing.

--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 07, 2019   |   "
+echo "   |   Mar. 07, 2019   |   "
 
-// Launch: -freq 240 +mat_software_aa_strength 0
+// Launch: -freq 240 -d3d9ex +mat_software_aa_strength 0
 
 
 ///////////////
@@ -61,8 +61,15 @@ snd_hwcompat "0"
 
 snd_hrtf_distance_behind "100"
 
-cl_mute_all_but_friends_and_party "0"
+
+///////////////
+// Comms     //
+///////////////
+
 cl_mute_enemy_team "0"
+cl_mute_all_but_friends_and_party "0"
+cl_hide_avatar_images "2"
+cl_sanitize_player_names "1"
 
 
 ///////////////
