--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 08, 2019   |   "
+echo "   |   Mar. 09, 2019   |   "
 
-// Launch: -freq 144 -tickrate 128
+// Launch: -freq 144 -d3d9ex -tickrate 128
 
 
 ///////////////
@@ -61,8 +61,15 @@ snd_hwcompat "0"
 
 snd_hrtf_distance_behind "100"
 
-cl_mute_all_but_friends_and_party "0"
+
+///////////////
+// Comms     //
+///////////////
+
 cl_mute_enemy_team "0"
+cl_mute_all_but_friends_and_party "0"
+cl_hide_avatar_images "2"
+cl_sanitize_player_names "1"
 
 
 ///////////////
@@ -371,7 +378,7 @@ cl_allowupload "1"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
-cl_forcepreload "0"
+//cl_forcepreload "0"
 
 cl_freezecameffects_showholiday "0"
 
