Reverted player names.
Changed +voicerecord bind.
Changed radio binds.
Changed mouse4 bind to monitorgamma.
Uncommented cl_forcepreload.
Standardized Napkin's configs.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 09, 2019   |   "
+echo "   |   Mar. 15, 2019   |   "
 
 // Launch: -freq 144 -d3d9ex -tickrate 128
 
@@ -69,7 +69,7 @@ snd_hrtf_distance_behind "100"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
 cl_hide_avatar_images "2"
-cl_sanitize_player_names "1"
+cl_sanitize_player_names "0"
 
 
 ///////////////
@@ -258,7 +258,7 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "radio3"
+unbind "c"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
@@ -266,7 +266,7 @@ bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
 bind "j" "impulse 200"
-bind "k" "bind c +voicerecord"
+bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "teammenu; say_team Mid"
 bind "n" "noclip"
@@ -279,9 +279,9 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "slot12; radio2"
+bind "x" "slot12; radio3"
 bind "y" "messagemode"
-bind "z" "radio1"
+bind "z" "radio"
 bind "KP_INS" "buy vest"
 bind "KP_DEL" "buy vesthelm"
 bind "KP_END" "buy hegrenade"
@@ -351,7 +351,7 @@ bind "F12" "exec csgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "toggle voice_enable 0 1"
+bind "MOUSE4" "toggle mat_monitorgamma 1.6 2.6"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
@@ -378,7 +378,7 @@ cl_allowupload "1"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
-//cl_forcepreload "0"
+cl_forcepreload "0"
 
 cl_freezecameffects_showholiday "0"
 
