--- a/napkinpro.cfg
+++ b/napkinpro.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 07, 2019   |   "
+echo "   |   Mar. 15, 2019   |   "
 
 // Launch: -freq 240 -d3d9ex -tickrate 128 +mat_software_aa_strength 0
 
@@ -9,7 +9,7 @@ echo "   |   Mar. 07, 2019   |   "
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "100"
+mm_dedicated_search_maxping "240"
 net_client_steamdatagram_enable_override "-1"   // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat, ord
 
@@ -69,7 +69,7 @@ snd_hrtf_distance_behind "100"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
 cl_hide_avatar_images "2"
-cl_sanitize_player_names "1"
+cl_sanitize_player_names "0"
 
 
 ///////////////
@@ -252,7 +252,7 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "+voicerecord"
+unbind "c"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
@@ -260,7 +260,7 @@ bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
 unbind "j"
-unbind "k"
+bind "k" "+voicerecord"
 unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
@@ -287,8 +287,8 @@ bind "KP_RIGHTARROW" "buy defuser"
 bind "KP_HOME" "buy taser"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
-bind "KP_SLASH" "say_team <- Left"
-bind "KP_MULTIPLY" "say_team Right ->"
+unbind "KP_SLASH"
+unbind "KP_MULTIPLY"
 bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
