--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 07, 2019   |   "
+echo "   |   Mar. 15, 2019   |   "
 
 // Launch: -freq 240 -d3d9ex +mat_software_aa_strength 0
 
@@ -69,7 +69,7 @@ snd_hrtf_distance_behind "100"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
 cl_hide_avatar_images "2"
-cl_sanitize_player_names "1"
+cl_sanitize_player_names "0"
 
 
 ///////////////
@@ -128,14 +128,14 @@ cpu_frequency_monitoring "0"
 mat_monitorgamma "2.0"
 
 viewmodel_fov "60"
-viewmodel_offset_x "1"                  // "2.500000"
-viewmodel_offset_y "1"                  // "2"
-viewmodel_offset_z "-1"                 // "-1.5"
+viewmodel_offset_x "1"
+viewmodel_offset_y "1"
+viewmodel_offset_z "-1"
 viewmodel_presetpos "1"
 viewmodel_recoil "1.0"
 
-cl_viewmodel_shift_left_amt "1.5"       // "0.5"
-cl_viewmodel_shift_right_amt "0.75"     // "0.25"
+cl_viewmodel_shift_left_amt "1.5"
+cl_viewmodel_shift_right_amt "0.75"
 
 cl_bob_lower_amt "5"
 cl_bobcycle "0.98"
@@ -258,16 +258,16 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "+voicerecord"
+unbind "c"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
-bind "j" "radio3; impulse 200"
-unbind "k"
-bind "l" "impulse 100"
+unbind "j"
+bind "k" "+voicerecord"
+unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
 bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2"
@@ -279,9 +279,9 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "slot12; radio2"
+bind "x" "slot12; radio3"
 bind "y" "messagemode"
-bind "z" "radio1"
+bind "z" "radio"
 bind "KP_INS" "buy vest"
 bind "KP_DEL" "buy vesthelm"
 bind "KP_END" "buy hegrenade"
@@ -293,8 +293,8 @@ bind "KP_RIGHTARROW" "buy defuser"
 bind "KP_HOME" "buy taser"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
-bind "KP_SLASH" "say_team <- Left"
-bind "KP_MULTIPLY" "say_team Right ->"
+unbind "KP_SLASH"
+unbind "KP_MULTIPLY"
 bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
@@ -340,10 +340,10 @@ bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
 bind "F3" "slot10"
 bind "F4" "say_team Bomb dropped!"
-bind "F5" "say_team A"
-bind "F6" "say_team B"
-bind "F7" "say_team Bomb go A"
-bind "F8" "say_team Bomb go B"
+unbind "F5"
+unbind "F6"
+unbind "F7"
+unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit prompt"
 bind "F11" "exec napkincsgolow.cfg"
@@ -351,8 +351,8 @@ bind "F12" "exec napkincsgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "lastinv"             // "toggle voice_enable 0 1"
-bind "MOUSE5" "lastinv"
+bind "MOUSE4" "lastinv"
+bind "MOUSE5" "toggle mat_monitorgamma 1.6 2.6"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -370,7 +370,7 @@ con_filter_enable "2"
 con_filter_text "Damage"
 con_filter_text_out "Player:"
 
-cl_downloadfilter "all"
+cl_downloadfilter "none"
 
 cl_allowdownload "1"
 cl_allowupload "1"
