Changed savepos3 to savepitch.
getpos_exact does not save pitch (bug).
Using getpos instead for teleport3.

--- a/teleport.cfg
+++ b/teleport.cfg
@@ -14,15 +14,16 @@ alias "teleport" "exec teleport.log"
 alias "savepos2" "con_logfile cfg\teleport2.log; getpos_exact; con_logfile 0; play ui\csgo_ui_crate_item_scroll.wav"
 alias "teleport2" "exec teleport2.log; play ui\csgo_ui_page_scroll.wav"
 
-alias "savepos3" "con_logfile cfg\teleport3.log; getpos_exact; con_logfile 0; play ui\csgo_ui_crate_item_scroll.wav"
+alias "savepitch" "con_logfile cfg\teleport3.log; getpos; con_logfile 0; play ui\csgo_ui_crate_item_scroll.wav"
 alias "teleport3" "exec teleport3.log; play ui\csgo_ui_page_scroll.wav"
 
 bind "z" "savepos"
-bind "F5" "savepos2"
-bind "F6" "savepos3"
-
 bind "x" "teleport"
+
+bind "F5" "savepos2"
 bind "F7" "teleport2"
+
+bind "F6" "savepitch"
 bind "F8" "teleport3"
 
 
@@ -33,8 +34,8 @@ echo "   ----------------------------------------------------   "
 echo "   |  Delete teleport .LOG files to save disk space!  |   "
 echo "   |                                                  |   "
 echo "   |  Key Bindings:                                   |   "
-echo "   |       SavePos1 = Z       Teleport1 = X           |   "
-echo "   |       SavePos2 = F5      Teleport2 = F7          |   "
-echo "   |       SavePos3 = F6      Teleport3 = F8          |   "
+echo "   |       SavePos1  = Z       Teleport1 = X          |   "
+echo "   |       SavePos2  = F5      Teleport2 = F7         |   "
+echo "   |       SavePitch = F6      Teleport3 = F8         |   "
 echo "   ----------------------------------------------------   "
 echo "                                                          "
