Changed teleport script bindings.

--- a/teleport.cfg
+++ b/teleport.cfg
@@ -8,23 +8,23 @@ developer "0"
 con_timestamp "0"
 con_logfile ""
 
-alias "savepos" "con_logfile cfg\teleport.log; getpos_exact; con_logfile 0; play ui\csgo_ui_crate_item_scroll.wav"
-alias "teleport" "exec teleport.log"
+alias "savepos" "con_logfile cfg\teleport.log; getpos_exact; con_logfile 0; play ui\beep07.wav"
+alias "savepos2" "con_logfile cfg\teleport2.log; getpos_exact; con_logfile 0; play ui\beep07.wav"
 
-alias "savepos2" "con_logfile cfg\teleport2.log; getpos_exact; con_logfile 0; play ui\csgo_ui_crate_item_scroll.wav"
-alias "teleport2" "exec teleport2.log; play ui\csgo_ui_page_scroll.wav"
+alias "savepitch" "con_logfile cfg\teleport.log; getpos; con_logfile 0; play ui\beepclear.wav"
+alias "savepitch2" "con_logfile cfg\teleport2.log; getpos; con_logfile 0; play ui\beepclear.wav"
 
-alias "savepitch" "con_logfile cfg\teleport3.log; getpos; con_logfile 0; play ui\csgo_ui_crate_item_scroll.wav"
-alias "teleport3" "exec teleport3.log; play ui\csgo_ui_page_scroll.wav"
+alias "teleport" "exec teleport.log; play ui\panorama\music_equip_01.wav"
+alias "teleport2" "exec teleport2.log; play ui\panorama\music_equip_01.wav"
 
-bind "z" "savepos"
-bind "x" "teleport"
+bind "F5" "savepos"
+bind "F6" "savepos2"
 
-bind "F5" "savepos2"
-bind "F7" "teleport2"
+bind "F7" "savepitch"
+bind "F8" "savepitch2"
 
-bind "F6" "savepitch"
-bind "F8" "teleport3"
+bind "z" "teleport"
+bind "x" "teleport2"
 
 
 echo "   |  TELEPORT LOADED  |   "
@@ -34,8 +34,8 @@ echo "   ----------------------------------------------------   "
 echo "   |  Delete teleport .LOG files to save disk space!  |   "
 echo "   |                                                  |   "
 echo "   |  Key Bindings:                                   |   "
-echo "   |       SavePos1  = Z       Teleport1 = X          |   "
-echo "   |       SavePos2  = F5      Teleport2 = F7         |   "
-echo "   |       SavePitch = F6      Teleport3 = F8         |   "
+echo "   |       SavePos   = F5      SavePos2   = F6        |   "
+echo "   |       SavePitch = F7      SavePitch2 = F8        |   "
+echo "   |       Teleport  = Z       Teleport2  = X         |   "
 echo "   ----------------------------------------------------   "
 echo "                                                          "
