Disabled noclip on teleport.

--- a/teleport.cfg
+++ b/teleport.cfg
@@ -14,8 +14,8 @@ alias "savepos2" "con_logfile cfg\teleport2.log; getpos_exact; con_logfile 0; pl
 alias "savepitch" "con_logfile cfg\teleport.log; getpos; con_logfile 0; play ui\beepclear.wav"
 alias "savepitch2" "con_logfile cfg\teleport2.log; getpos; con_logfile 0; play ui\beepclear.wav"
 
-alias "teleport" "exec teleport.log; play ui\panorama\music_equip_01.wav"
-alias "teleport2" "exec teleport2.log; play ui\panorama\music_equip_01.wav"
+alias "teleport" "exec teleport.log; noclip 0; play ui\panorama\music_equip_01.wav"
+alias "teleport2" "exec teleport2.log; noclip 0; play ui\panorama\music_equip_01.wav"
 
 bind "F5" "savepos"
 bind "F6" "savepos2"
