D3D9EX enabled by default update.
Added annoying sound effects.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 15, 2019   |   "
+echo "   |   Apr. 24, 2019   |   "
 
-// Launch: -freq 144 -d3d9ex -tickrate 128
+// Launch: -freq 144 -tickrate 128
 
 
 ///////////////
@@ -398,6 +398,7 @@ cl_clanid "2456601"
 // End       //
 ///////////////
 
+play "buttons\weapon_confirm.wav"
 
 echo "   |  CATCSGO LOADED!  |   "
 echo "   ---------------------   "
