--- a/teleport.cfg
+++ b/teleport.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Apr. 21, 2019   |   "
+echo "   |   Apr. 24, 2019   |   "
 
 
 sv_cheats "1"
@@ -11,8 +11,8 @@ con_logfile ""
 alias "savepos" "con_logfile cfg\teleport.log; getpos_exact; con_logfile 0; play ui\beep07.wav"
 alias "savepos2" "con_logfile cfg\teleport2.log; getpos_exact; con_logfile 0; play ui\beep07.wav"
 
-alias "savepitch" "con_logfile cfg\teleport.log; getpos; con_logfile 0; play ui\beepclear.wav"
-alias "savepitch2" "con_logfile cfg\teleport2.log; getpos; con_logfile 0; play ui\beepclear.wav"
+alias "savepitch" "con_logfile cfg\teleport.log; getpos; con_logfile 0; play buttons\button17.wav"
+alias "savepitch2" "con_logfile cfg\teleport2.log; getpos; con_logfile 0; play buttons\button17.wav"
 
 alias "teleport" "exec teleport.log; noclip 0; play ui\panorama\music_equip_01.wav"
 alias "teleport2" "exec teleport2.log; noclip 0; play ui\panorama\music_equip_01.wav"
@@ -27,15 +27,17 @@ bind "z" "teleport"
 bind "x" "teleport2"
 
 
+play "physics\flesh\flesh_squishy_impact_hard3.wav"
+
 echo "   |  TELEPORT LOADED  |   "
 echo "   ---------------------   "
 echo "                           "
-echo "   ----------------------------------------------------   "
-echo "   |  Delete teleport .LOG files to save disk space!  |   "
-echo "   |                                                  |   "
-echo "   |  Key Bindings:                                   |   "
-echo "   |       SavePos   = F5      SavePos2   = F6        |   "
-echo "   |       SavePitch = F7      SavePitch2 = F8        |   "
-echo "   |       Teleport  = Z       Teleport2  = X         |   "
-echo "   ----------------------------------------------------   "
-echo "                                                          "
+echo "   -------------------------------------------------   "
+echo "   |  Delete teleport .LOG files if glitch occurs! |   "
+echo "   |                                               |   "
+echo "   |  Key Bindings:                                |   "
+echo "   |       SavePos   = F5      SavePos2   = F6     |   "
+echo "   |       SavePitch = F7      SavePitch2 = F8     |   "
+echo "   |       Teleport  = Z       Teleport2  = X      |   "
+echo "   -------------------------------------------------   "
+echo "                                                       "
