--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 15, 2019   |   "
+echo "   |   Apr. 24, 2019   |   "
 
-// Launch: -freq 240 -d3d9ex +mat_software_aa_strength 0
+// Launch: -freq 240 +mat_software_aa_strength 0
 
 
 ///////////////
@@ -398,6 +398,7 @@ cl_clanid "2456601"
 // End       //
 ///////////////
 
+play "buttons\weapon_confirm.wav"
 
 echo "   | NAPKINLOW LOADED! |   "
 echo "   ---------------------   "
