--- a/train.cfg
+++ b/train.cfg
@@ -1,6 +1,6 @@
-echo
+echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 18, 2018   |   "
+echo "   |   Apr. 24, 2019   |   "
 
 
 game_type 0
@@ -36,6 +36,7 @@ bot_kick
 bot_difficulty 3
 bot_dont_shoot 1
 bot_join_team any
+bot_mimic_yaw_offset 0
 bot_quota 0
 bot_stop 1
 
@@ -87,9 +88,11 @@ mp_respawn_on_death_t 1
 mp_maxmoney 65000
 mp_startmoney 65000
 
+mp_warmuptime 0
 mp_restartgame 1
 
+play "buttons\light_power_on_switch_01.wav"
 
 echo "   |   TRAIN LOADED!   |   "
 echo "   ---------------------   "
-echo
+echo "                           "
