Added Teleport batch script.
Changed ex_interp to reduce jitter.

--- a/cs16.cfg
+++ b/cs16.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jan. 09, 2019   |   "
+echo "   |   May. 06, 2019   |   "
 
 // Launch: -freq 144 -nojoy
 
@@ -23,7 +23,9 @@ sv_maxupdaterate "102"
 rate "100000"
 cl_cmdrate "102"
 cl_updaterate "102"
-ex_interp "0.009"
+
+// ex_interp 0.01 causes jitter.
+ex_interp "0.05"
 
 
 ///////////////
