Changed gl_texturemode to default.
gl_texturemode "GL_NEAREST"
gl_texturemode "GL_LINEAR"
gl_texturemode "GL_NEAREST_MIPMAP_NEAREST"
gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
gl_texturemode "GL_NEAREST_MIPMAP_LINEAR"
gl_texturemode "GL_LINEAR_MIPMAP_LINEAR" (default)

--- a/cs16.cfg
+++ b/cs16.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 06, 2019   |   "
+echo "   |   May. 22, 2019   |   "
 
 // Launch: -freq 144 -nojoy
 
@@ -258,7 +258,7 @@ skill "3"
 
 // OpenGL
 gl_vsync "0"
-gl_texturemode "GL_NEAREST"
+gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 
 
 ///////////////
