Added cl_minmodels 1.

--- a/cs16.cfg
+++ b/cs16.cfg
@@ -24,7 +24,7 @@ rate "100000"
 cl_cmdrate "102"
 cl_updaterate "102"
 
-// ex_interp 0.01 causes jitter.
+// ex_interp 0.009 causes jitter.
 ex_interp "0.05"
 
 
@@ -87,7 +87,7 @@ cl_crosshair_translucent "0"
 // Mouse     //
 ///////////////
 
-sensitivity "3.33"
+sensitivity "3.3425"
 zoom_sensitivity_ratio "1.0"
 
 +mlook
@@ -253,6 +253,10 @@ cl_download_ingame "1"
 
 cl_allowdownload "1"
 cl_allowupload "1"
+
+cl_minmodels "1"
+cl_min_ct "4"
+cl_min_t "6"
 
 skill "3"
 
