--- a/napkincs16.cfg
+++ b/napkincs16.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jan. 09, 2019   |   "
+echo "   |   May. 22, 2019   |   "
 
 // Launch: -freq 240 -nojoy
 
@@ -23,7 +23,9 @@ sv_maxupdaterate "102"
 rate "100000"
 cl_cmdrate "102"
 cl_updaterate "102"
-ex_interp "0.009"
+
+// ex_interp 0.009 causes jitter.
+ex_interp "0.05"
 
 
 ///////////////
@@ -85,7 +87,7 @@ cl_crosshair_translucent "0"
 // Mouse     //
 ///////////////
 
-sensitivity "3.33"
+sensitivity "3.3425"
 zoom_sensitivity_ratio "1.0"
 
 +mlook
@@ -252,11 +254,15 @@ cl_download_ingame "1"
 cl_allowdownload "1"
 cl_allowupload "1"
 
+cl_minmodels "1"
+cl_min_ct "4"
+cl_min_t "6"
+
 skill "3"
 
 // OpenGL
 gl_vsync "0"
-gl_texturemode "GL_NEAREST"
+gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 
 
 ///////////////
