Updated SDR libraries to the latest version.
https://blog.counter-strike.net/index.php/2019/05/24314/

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 16, 2019   |   "
+echo "   |   May. 23, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -10,8 +10,12 @@ echo "   |   May. 16, 2019   |   "
 ///////////////
 
 mm_dedicated_search_maxping "300"
-net_client_steamdatagram_enable_override "-1"   // -1 = UDP, 0 = Auto, 1 = SDR
-sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat, ord
+
+// SDR Override [-1 = UDP, 0 = Auto, 1 = SDR]
+net_client_steamdatagram_enable_override "-1"
+
+// Relay Servers [sgp, tyo, hkg, lax, eat, ord]
+// sdr SDRClient_ForceRelayCluster ""
 
 fps_max "500"
 fps_max_menu "120"
