--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 07, 2019   |   "
+echo "   |   May. 23, 2019   |   "
 
 // Launch: -freq 144 -nojoy -novid
 
@@ -230,7 +230,7 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 4.5 1 6 5.5"
+bind "-" "toggle cl_crosshairsize 4.5 2 1 5.5"
 bind "=" "toggle cl_crosshaircolor 0 1 4 5"
 unbind "ENTER"
 bind "SPACE" "+jump"
@@ -273,8 +273,8 @@ bind "F11" "exec css.cfg"
 bind "F12" "exec css.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
-bind "MOUSE3" "incrementvar mat_monitorgamma 1.6 2.7 1"
-bind "MOUSE4" "toggle voice_scale 0.0 0.2"
+bind "MOUSE3" "impulse 100"
+bind "MOUSE4" "incrementvar mat_monitorgamma 1.6 2.7 1"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
@@ -297,6 +297,10 @@ cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
 cl_forcepreload "1"
+
+cl_minmodels "1"
+cl_min_ct "1"
+cl_min_t "2"
 
 skill "3"
 
