--- a/napkincss.cfg
+++ b/napkincss.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 07, 2019   |   "
+echo "   |   May. 23, 2019   |   "
 
 // Launch: -freq 240 -nojoy -novid
 
@@ -216,8 +216,8 @@ bind "KP_RIGHTARROW" "buy defuser"
 bind "KP_HOME" "buy shield"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
-bind "KP_SLASH" "say_team <- Left"
-bind "KP_MULTIPLY" "say_team Right ->"
+unbind "KP_SLASH"
+unbind "KP_MULTIPLY"
 bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
@@ -230,7 +230,7 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 4.5 1 6 5.5"
+bind "-" "toggle cl_crosshairsize 4.5 2 1 5.5"
 bind "=" "toggle cl_crosshaircolor 0 1 4 5"
 unbind "ENTER"
 bind "SPACE" "+jump"
@@ -263,19 +263,19 @@ bind "F1" "use weapon_c4; drop"
 bind "F2" "rebuy"
 bind "F3" "say_team Bomb"
 bind "F4" "say_team Bomb dropped!"
-bind "F5" "say_team A"
-bind "F6" "say_team B"
-bind "F7" "say_team Bomb go A"
-bind "F8" "say_team Bomb go B"
+unbind "F5"
+unbind "F6"
+unbind "F7"
+unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit"
 bind "F11" "exec napkincss.cfg"
 bind "F12" "exec napkincss.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE3" "incrementvar mat_monitorgamma 1.6 2.7 1"
+bind "MOUSE3" "impulse 100"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "lastinv"
+bind "MOUSE5" "incrementvar mat_monitorgamma 1.6 2.7 1"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -297,6 +297,10 @@ cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
 cl_forcepreload "1"
+
+cl_minmodels "1"
+cl_min_ct "1"
+cl_min_t "2"
 
 skill "3"
 
