--- a/train.cfg
+++ b/train.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Apr. 24, 2019   |   "
+echo "   |   Jun. 10, 2019   |   "
 
 
 game_type 0
@@ -32,6 +32,8 @@ ammo_grenade_limit_default 1
 ammo_grenade_limit_flashbang 2
 ammo_grenade_limit_total 6
 
+bot_autodifficulty_threshold_high 20.0
+bot_autodifficulty_threshold_low 20.0
 bot_kick
 bot_difficulty 3
 bot_dont_shoot 1
@@ -65,11 +67,15 @@ mp_roundtime 1.92
 mp_roundtime_defuse 1.92
 mp_roundtime_hostage 1.92
 
+mp_death_drop_breachcharge 1
 mp_death_drop_c4 1
 mp_death_drop_defuser 1
 mp_death_drop_grenade 2
 mp_death_drop_gun 1
+mp_death_drop_healthshot 1
+mp_death_drop_taser 1
 
+mp_damage_headshot_only 0
 mp_defuser_allocation 0
 mp_free_armor 0
 
