--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -1,6 +1,6 @@
-echo
+echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 23, 2018   |   "
+echo "   |   Jun. 10, 2019   |   "
 
 
 game_type 0
@@ -20,7 +20,7 @@ sv_coaching_enabled 1
 sv_infinite_ammo 1
 sv_regeneration_force_on 0
 
-sv_grenade_trajectory 1
+sv_grenade_trajectory 0
 sv_showimpacts 0
 sv_showimpacts_time 20
 
@@ -32,10 +32,13 @@ ammo_grenade_limit_default 1
 ammo_grenade_limit_flashbang 2
 ammo_grenade_limit_total 6
 
+bot_autodifficulty_threshold_high 20.0
+bot_autodifficulty_threshold_low 20.0
 bot_kick
 bot_difficulty 3
 bot_dont_shoot 0
 bot_join_team any
+bot_mimic_yaw_offset 0
 bot_quota 0
 bot_stop 0
 
@@ -64,11 +67,15 @@ mp_roundtime 1.92
 mp_roundtime_defuse 1.92
 mp_roundtime_hostage 1.92
 
+mp_death_drop_breachcharge 0
 mp_death_drop_c4 0
 mp_death_drop_defuser 0
 mp_death_drop_grenade 0
 mp_death_drop_gun 0
+mp_death_drop_healthshot 0
+mp_death_drop_taser 0
 
+mp_damage_headshot_only 0
 mp_defuser_allocation 0
 mp_free_armor 1
 
@@ -87,11 +94,14 @@ mp_respawn_on_death_t 1
 mp_maxmoney 0
 mp_startmoney 0
 
+mp_warmuptime 0
 mp_restartgame 1
 
-bind F1 "give weapon_healthshot"
+bind x "give weapon_healthshot; slot12"
 
+
+play "buttons\light_power_on_switch_01.wav"
 
 echo "   | TRAINDMAWP LOADED |   "
 echo "   ---------------------   "
-echo
+echo "                           "
