Defaulted engine_no_focus_sleep to 50.
Possibly removing engine_no_focus_sleep convar in the future.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 23, 2019   |   "
+echo "   |   Jun. 25, 2019   |   "
 
-// Launch: -freq 144 -tickrate 128
+// Launch: -freq 144 -tickrate 128 -novid
 
 
 ///////////////
@@ -390,7 +390,7 @@ cl_obs_interp_enable "1"
 cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
-engine_no_focus_sleep "0"
+engine_no_focus_sleep "50"
 
 lobby_default_privacy_bits2 "0"
 ui_setting_advertiseforhire_auto "0"
