--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 23, 2019   |   "
+echo "   |   Jun. 27, 2019   |   "
 
 // Launch: -freq 144 -nojoy -novid
 
@@ -16,6 +16,10 @@ cl_cmdrate "100"
 cl_updaterate "100"
 cl_interp "0.000000"
 cl_interp_ratio "1.0"
+
+cl_lagcompensation "1"
+cl_predict "1"
+cl_predictweapons "1"
 
 
 ///////////////
