--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 25, 2019   |   "
+echo "   |   Jun. 27, 2019   |   "
 
 // Launch: -freq 144 -tickrate 128 -novid
 
@@ -25,6 +25,10 @@ cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0.000000"
 cl_interp_ratio "1.0"
+
+cl_lagcompensation "1"
+cl_predict "1"
+cl_predictweapons "1"
 
 
 ///////////////
