--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 10, 2019   |   "
+echo "   |   Jun. 27, 2019   |   "
 
 
 game_type 0
@@ -23,6 +23,7 @@ sv_regeneration_force_on 0
 sv_grenade_trajectory 0
 sv_showimpacts 0
 sv_showimpacts_time 20
+sv_showlagcompensation 0
 
 cl_crosshair_recoil 0
 cl_weapon_debug_show_accuracy 0
