Added lifesteal convar.

--- a/traindm.cfg
+++ b/traindm.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 27, 2019   |   "
+echo "   |   Jun. 29, 2019   |   "
 
 
 game_type 0
@@ -77,6 +77,7 @@ mp_death_drop_healthshot 0
 mp_death_drop_taser 0
 
 mp_damage_headshot_only 1
+mp_damage_vampiric_amount 0
 mp_defuser_allocation 0
 mp_free_armor 1
 
