--- a/train.cfg
+++ b/train.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 27, 2019   |   "
+echo "   |   Jun. 29, 2019   |   "
 
 
 game_type 0
@@ -77,6 +77,7 @@ mp_death_drop_healthshot 1
 mp_death_drop_taser 1
 
 mp_damage_headshot_only 0
+mp_damage_vampiric_amount 0
 mp_defuser_allocation 0
 mp_free_armor 0
 
